<resources>
    <string name="app_name">Statik</string>

    //bottom navigation
    <string name="nav_statistic">Статистика</string>
    <string name="nav_global">Главная</string>
    <string name="nav_settings">Настройки</string>

    //system
    <string name="system_start">Начать</string>
    <string name="system_category">Категория</string>
    <string name="system_period">Период</string>
    <string name="system_edit">Изменить</string>
    <string name="system_complete">Готово</string>

    <string name="system_select_date">Выбор даты</string>
    <string name="system_select_time">Выберите время</string>

    <string name="notification_message">Пришло время подвести итоги дня</string>

    <string name="system_not_found_active_habit">Активных привычек не найдено.</string>
    <string name="system_not_found_habit_go_active">Перейти в активные.</string>
    <string name="system_not_found_archive_habit">Архивных привычек не найдено.</string>
    <string name="system_not_found_habit_go_archive">Перейти в архив.</string>

    <string name="system_creating">В разработке</string>
    <string name="system_rating_best">Спасибо!</string>
    <string name="system_rating_notmal">Сообщите нам что вас расстроило. Мы стремимся стать лучше!</string>
    <string name="system_rating_bed">Мы будем работать усерднее!</string>

    //statistic
    <string name="stat_dayOnApp">Количество дней \nв приложении</string>
    <string name="stat_currentSeries">Текущая серия \nбез пропусков дней</string>
    <string name="stat_record">Рекорд серии \nбез пропусков дней</string>
    <string name="stat_entrance">Стаканы воды:</string>
    <string name="stat_donat_dayOnApp">Дней в приложении:</string>

    <string name="stat_activeDay">Активный день</string>
    <string name="stat_passiveDay">Пропуск</string>


    <string name="stat_deyUpperTarget">Дни, когда достиг цели</string>
    <string name="stat_deyDownTarget">Дни, когда не достиг цели</string>


    //settings
    <string name="set_habit">Привычки</string>
    <string name="set_habit_activate">Активные</string>
    <string name="set_habit_archive">Архив</string>

    <string name="set_custom">Кастомизация</string>
    <string name="set_custom_theme">Тема</string>
    <string name="set_custom_theme_light">Светлая</string>
    <string name="set_custom_theme_dark">Тёмная</string>
    <string name="set_custom_theme_sustem">Системная</string>
    <string name="set_custom_color_design">Цветовое оформление</string>
    <string name="set_custom_language">Язык</string>
    <string name="set_custom_language_rus">Русский</string>
    <string name="set_custom_language_en">English</string>

    <string name="set_custom_notify">Уведомления</string>
    <string name="set_custom_notify_turn_on">Включить уведомления</string>
    <string name="set_custom_notify_time">Время Уведомлений</string>
    <string name="set_custom_notify_settings">Настройки уведомлений</string>

    <string name="set_service">Сервис</string>
    <string name="set_service_feedback">Обратная связь</string>
    <string name="set_service_feedback_title">Вопрос по приложению Statik</string>
    <string name="set_service_feedback_message">Здравствуйте! У меня возник вопрос по поводу </string>
    <string name="set_service_feedback_complete">Сообщение отправлено</string>
    <string name="set_service_feedback_fatal">Ошибка. Что-то пошло не так</string>
    <string name="set_service_rating">Оценить приложение</string>
    <string name="set_service_rating_title">Как вам наше приложение?</string>
    <string name="set_service_rating_message">Вы можете написать в поддержку со своим предложением.</string>
    <string name="set_service_share">Поделиться приложением</string>

    //habit
    <string name="habit_water">Вода</string>
    <string name="habit_steps">Шаги</string>
    <string name="habit_words">Слова</string>
    <string name="habit_weather">Погода</string>
    <string name="habit_mood">Настроение</string>
    <string name="habit_productivity">Продуктивность</string>
    <string name="habit_sleep">Сон</string>
    <string name="habit_sport">Спорт</string>
    <string name="habit_screen_time">Экранное Время</string>
    <string name="habit_cost">Расходы</string>
    <string name="habit_comment">Комментарий</string>

    //time zone
    <string name="time_today">Сегодня</string>
    <string name="time_yesterday">Вчера</string>
    <string name="time_week">Неделя</string>
    <string name="time_month">Месяц</string>
    <string name="time_year">Год</string>

    <string name="month_Jan">Янв</string>
    <string name="month_Feb">Фев</string>
    <string name="month_Mar">Мар</string>
    <string name="month_Apr">Апр</string>
    <string name="month_May">Май</string>
    <string name="month_Jun">Июн</string>
    <string name="month_Jul">Июл</string>
    <string name="month_Aug">Авг</string>
    <string name="month_Sep">Сен</string>
    <string name="month_Okt">Окт</string>
    <string name="month_Nov">Ноя</string>
    <string name="month_Dec">Дек</string>

</resources>