<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/MyThemeBackgroundScreen"
    tools:context=".screen.StaticFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/MyThemeMainGray"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:background="@drawable/shape_up_panel"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/MyThemeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akatab"
            android:text="@string/system_category"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_system_category" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        style="@style/MyThemeFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/habit_water"
                        android:textSize="14sp"
                        app:cornerRadius="13dp" />

                    <Button
                        style="@style/MyThemeFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/habit_steps"
                        android:textSize="14sp"
                        app:cornerRadius="13dp" />

                    <Button
                        style="@style/MyThemeFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/habit_words"
                        android:textSize="14sp"
                        app:cornerRadius="13dp" />

                    <Button
                        style="@style/MyThemeFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/habit_weather"
                        android:textSize="14sp"
                        app:cornerRadius="13dp" />

                    <Button
                        style="@style/MyThemeFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/habit_mood"
                        android:textSize="14sp"
                        app:cornerRadius="13dp" />

                    <Button
                        style="@style/MyThemeFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/habit_productivity"
                        android:textSize="14sp"
                        app:cornerRadius="13dp" />

                    <Button
                        style="@style/MyThemeFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/habit_sport"
                        android:textSize="14sp"
                        app:cornerRadius="13dp" />

                    <Button
                        style="@style/MyThemeFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/habit_sleep"
                        android:textSize="14sp"
                        app:cornerRadius="13dp" />

                    <Button
                        style="@style/MyThemeFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/habit_screen_time"
                        android:textSize="14sp"
                        app:cornerRadius="13dp" />

                    <Button
                        style="@style/MyThemeFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/habit_cost"
                        android:textSize="14sp"
                        app:cornerRadius="13dp" />

                    <Button
                        style="@style/MyThemeFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/habit_comment"
                        android:textSize="14sp"
                        app:cornerRadius="13dp" />

                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <TextView
            style="@style/MyThemeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/akatab"
            android:text="@string/system_period"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_system_calendar" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        style="@style/MyThemeFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/time_today"
                        android:textSize="14sp"
                        app:cornerRadius="13dp" />

                    <Button
                        style="@style/MyThemeFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/time_yesterday"
                        android:textSize="14sp"
                        app:cornerRadius="13dp" />

                    <Button
                        style="@style/MyThemeFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/time_week"
                        android:textSize="14sp"
                        app:cornerRadius="13dp" />

                    <Button
                        style="@style/MyThemeFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/time_month"
                        android:textSize="14sp"
                        app:cornerRadius="13dp" />

                    <Button
                        style="@style/MyThemeFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/time_year"
                        android:textSize="14sp"
                        app:cornerRadius="13dp" />
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="20dp">

            <TextView
                style="@style/MyThemeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akatab"
                android:text="@string/system_category"
                android:textSize="14sp" />

            <com.db.williamchart.view.LineChartView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:chart_axis="x"
                app:chart_labelsSize="12sp"
                app:chart_lineColor="@color/accent"
                app:chart_labelsColor="@color/white"
                app:chart_lineThickness="2dp"
                app:chart_smoothLine="true" />

            <TextView
                style="@style/MyThemeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akatab"
                android:text="@string/system_category"
                android:textSize="14sp" />
            <com.db.williamchart.view.BarChartView
                android:id="@+id/barChartView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:chart_barsColor="@color/accent"
                app:chart_labelsColor="@color/white"
                app:chart_barsRadius="12dp"
                app:chart_spacing="5dp"
                app:chart_labelsSize="12sp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>