<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_alert"
    android:orientation="vertical"
    android:paddingVertical="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        style="@style/MyThemeText"
        android:fontFamily="@font/akatab_bold"
        android:text="@string/set_service_rating_title"
        android:gravity="center"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:scaleY="0.7"
        android:scaleX="0.7"
        android:progressTint="@color/accent_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        style="@style/MyThemeText"
        android:fontFamily="@font/akatab"
        android:text="@string/set_service_rating_message"
        android:gravity="center"/>

    <Button
        android:id="@+id/rating_complete"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/system_complete"
        app:cornerRadius="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/accent"
        android:textColor="@color/n_dark"
        android:textSize="18sp"
        android:fontFamily="@font/akatab_bold"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"/>
</LinearLayout>