<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_alert"
    android:paddingVertical="20dp"
    android:paddingHorizontal="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/alert_notify_enable"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:button="@null"
            android:background="@drawable/selector_color_1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:fontFamily="@font/akatab"
            style="@style/MyThemeText"
            android:layout_marginStart="10dp"
            android:gravity="center|left"
            android:text="@string/set_custom_notify_turn_on"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <ImageButton
            android:id="@+id/alert_notify_time"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:background="@drawable/ic_system_notify_alarm_off"/>
        <TextView
            android:id="@+id/alert_notify_time_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:fontFamily="@font/akatab"
            style="@style/MyThemeText"
            android:layout_marginStart="10dp"
            android:gravity="center|left"
            android:text="@string/set_custom_notify_time"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <ImageButton
            android:id="@+id/alert_notify_settings"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:clickable="true"
            android:background="@drawable/ic_system_notify_alarm_settings"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:fontFamily="@font/akatab"
            style="@style/MyThemeText"
            android:layout_marginStart="10dp"
            android:gravity="center|left"
            android:text="@string/set_custom_notify_settings"/>
    </LinearLayout>

    <Button
        android:id="@+id/alert_notify_complete"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/system_complete"
        app:cornerRadius="5dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/accent"
        android:textColor="@color/n_dark"
        android:textSize="18sp"
        android:fontFamily="@font/akatab_bold"
        android:layout_gravity="right" />

</LinearLayout>