<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_alert"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/set_custom_theme_dark"
                    style="@style/MyThemeText"
                    android:fontFamily="@font/akatab"
                    android:gravity="center"
                    android:textSize="12sp"/>
                <RadioButton
                    android:id="@+id/choose_theme_night"
                    android:layout_width="70dp"
                    android:layout_height="130dp"
                    android:background="@drawable/selector_choose_theme_night"
                    android:button="@null"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/set_custom_theme_light"
                    style="@style/MyThemeText"
                    android:fontFamily="@font/akatab"
                    android:gravity="center"
                    android:textSize="12sp"/>
                <RadioButton
                    android:id="@+id/choose_theme_light"
                    android:layout_width="70dp"
                    android:layout_height="130dp"
                    android:background="@drawable/selector_choose_theme_light"
                    android:button="@null"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/set_custom_theme_sustem"
                    style="@style/MyThemeText"
                    android:fontFamily="@font/akatab"
                    android:gravity="center"
                    android:textSize="12sp"/>
                <RadioButton
                    android:id="@+id/choose_theme_system"
                    android:layout_width="70dp"
                    android:layout_height="130dp"
                    android:background="@drawable/selector_choose_theme_system"
                    android:button="@null"/>
            </LinearLayout>
        </RadioGroup>
        
        <Button
            android:id="@+id/alert_theme_complete"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/system_complete"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/accent"
            android:textColor="@color/n_dark"
            android:textSize="18sp"
            android:fontFamily="@font/akatab_bold"
            android:layout_gravity="right"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</LinearLayout>